plugin_LTLIBRARIES = libgstrealworldtime.la

# sources used to compile this plug-in
libgstrealworldtime_la_SOURCES = gstrealworldtimeplugin.c gstabsolutetimestamp.h gstabsolutetimestamp.c gstmillisoverlay.h gstmillisoverlay.c gsttimestampfiltersink.h gsttimestampfiltersink.c

# compiler and linker flags used to compile this plugin, set in configure.ac
libgstrealworldtime_la_CFLAGS = $(GST_CFLAGS) $(PANGO_CFLAGS)
libgstrealworldtime_la_LIBADD = $(GST_LIBS) $(PANGO_LIBS)
libgstrealworldtime_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
